force-app/main/default/objects/Interaction__c/fields/Coverage_Team__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Team</label>
    <referenceTo>Coverage_Team__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>