force-app/main/default/objects/Interaction__c/fields/Reference_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Reference_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Reference Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>